k8s/prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-hpa-app-deployment
  labels:
    app: k8s-hpa-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-hpa-app
  template:
    metadata:
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: k8s-hpa-app
    spec:
      containers:
      - name: k8s-hpa-app
        image: haulene/k8s-hpa
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 2000m
          requests:
            cpu: 1500m
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          failureThreshold: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-hpa-app-service
  labels:
    app: k8s-hpa-app-service
spec:
  selector:
    app: k8s-hpa-app
  ports:
    - port: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-hpa-app-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-hpa-app-service
                port:
                  number: 8080
